--- a/style.css
+++ b/style.css
@@ -1,31 +1,35 @@
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 16px;
   line-height: 1;
 }
 
-textarea {
+textarea{
   background: transparent;
   border: none;
   resize: none;
-  color: #000000;
+  color: black;
   border-left: 1px solid black;
   padding: 10px;
 }
 
 .jumbotron {
   text-align: center;
-  background-color: transparent;
-  color: black;
+  background-color: slateblue;
+  color: white;
   border-radius: 0;
   border-bottom: 10px solid black;
 }
 
-.description {
+h1 {
+    font-size: 20px;
+}
+
+.description{
   white-space: pre-wrap;
 }
 
-.time-block {
+.time-block{
   text-align: center;
   border-radius: 15px;
 }
@@ -33,63 +37,57 @@ textarea {
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;
+  border-top: 1px solid white;;
 }
 
 .hour {
   background-color: #ffffff;
   color: #000000;
-  border-top: 1px dashed #000000;
+  border-top: 1px dashed black; 
+  border-bottom: 1px dashed black; 
+  border-left: 1px dashed black; 
+  padding: 10px;
 }
 
+/* Colors for past, present and future */
 .past {
-  background-color: #d3d3d3;
+  background-color: lightslategray;
   color: white;
 }
 
 .present {
-  background-color: #ff6961;
-  color: white;
+  background-color: aliceblue;
+  color: black;
 }
 
 .future {
-  background-color: #77dd77;
+  background-color: cornflowerblue;
   color: white;
 }
 
-.saveBtn {
+/* Button styling */
+.completeBtn, .saveBtn {
+  border-left: 1px solid black;
+  background-color: slateblue;
+  color: white;  
+}
+.deleteBtn {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06aed5;
+  background-color: slateblue;
   color: white;
 }
 
-.saveBtn i:hover {
+.saveBtn, .completeBtn, .deleteBtn i:hover {
   font-size: 20px;
-  transition: all 0.3s ease-in-out;
+  transition: all .3s ease-in-out;
 }
 
-/*** OVERWRITE - MEDIA QUERY FOR TABLETS AND SMALLER  ***/
-/* This will be applied on any screen 768px and bellow */
-@media screen and (max-width: 768px), screen and (max-width: 575px) {
-  .row {
-    height: auto;
-    margin-top: 20px;
-  }
+.complete{
+text-decoration: line-through !important;
+}
 
-  .hour {
-    padding-right: 17%;
-  }
-
-  .saveBtn {
-    border: 0;
-    border-radius: 0.25rem;
-    height: 50px;
-  }
-
-  textarea {
-    min-height: 85px;
-    border: 0;
-  }
+.far {
+  font-size: 200%;
 }
