--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ textarea{
 
 .jumbotron {
   text-align: center;
-  background-color: slateblue;
+  background-color: rgb(224, 83, 203);
   color: white;
   border-radius: 0;
   border-bottom: 10px solid black;
@@ -56,7 +56,7 @@ h1 {
 }
 
 .present {
-  background-color: aliceblue;
+  background-color: rgb(255, 240, 253);
   color: black;
 }
 
@@ -68,14 +68,14 @@ h1 {
 /* Button styling */
 .completeBtn, .saveBtn {
   border-left: 1px solid black;
-  background-color: slateblue;
+  background-color: rgb(237, 141, 201);
   color: white;  
 }
 .deleteBtn {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: slateblue;
+  background-color: rgb(61, 177, 195);
   color: white;
 }
 
